// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellMappedData should render checked mapped data cell for a collection of values 1`] = `
<DefaultRenderer
  cellData="2, not_mapped, One, Value 1"
  columnData={Object {}}
/>
`;

exports[`CellMappedData should render checked mapped data cell for a string value 1`] = `
<DefaultRenderer
  cellData="Value 1"
  columnData={Object {}}
/>
`;
